# ObjectTracking

./: CMakeLists.txt  main.cpp
include/: ModifiedTrackerMedianFlow.hpp
src/: ModifiedTrackerMedianFlow.cpp  main.cpp
